--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">AndroidRTC</string>
-    <string name="host">54.214.218.3</string>
+    <string name="host">172.20.102.34</string>
+    <string name="port">3000</string>
 </resources>
